--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web Saya</title>
+        <title>Home - Website</title>
     </head>
     <body>
-        <h1>WEB CODING</h1>
-        <p>Hallo semua ini adalah web coding pertama saya.</br>Saya merupakan peserta ekskul coding.</p>
-        <p>Saya sedang belajar HTML, CSS dan Javascript.</p>
+        <header>
+            <nav class="navbar">
+                <ul>
+                   <li><a href="index.html" class=" active">Home</a></li>
+                   <li><a href="#" class=" active">Profile</a></li>
+                   <li><a href="#" class=" active">Contact</a></li>
+                   <li><a href="#" class=" active">Latihan</a></li>
+                </ul>
+             </nav>
+        </header>
+
+        <main>
+            <section class="home">
+                <h1>Selamat Datang</h1>
+                <p>Ini adalah home page</p>
+            </section>
+        </main>
+
+        <footer>
+            <p>&copy; 2025 My Website, All right reserved</p>
+        </footer>
     </body>
+
 </html>
